WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244175
Attr should use WeakPtr<Element> instead of a raw pointer
https://bugs.webkit.org/show_bug.cgi?id=244175
Summary
Attr should use WeakPtr<Element> instead of a raw pointer
Ryosuke Niwa
Reported
2022-08-21 17:24:48 PDT
Use WeakPtr in Attr.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2022-08-21 17:29:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3517
EWS
Comment 2
2022-08-22 18:04:26 PDT
Committed
253666@main
(e8f6005905f4): <
https://commits.webkit.org/253666@main
> Reviewed commits have been landed. Closing PR #3517 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-08-22 18:05:24 PDT
<
rdar://problem/99008721
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug