Attr should use WeakPtr<Element> instead of a raw pointer https://bugs.webkit.org/show_bug.cgi?id=244175

Reviewed by Darin Adler.

Use WeakPtr in Attr. Also deploy RefPtr following the new convention.

* Source/WebCore/dom/Attr.cpp:
(WebCore::Attr::Attr):
(WebCore::Attr::setPrefix):
(WebCore::Attr::setValue):
(WebCore::Attr::style):
(WebCore::Attr::value const):
(WebCore::Attr::elementAttribute): Deleted.
(WebCore::Attr::attachToElement):
* Source/WebCore/dom/Attr.h:

Canonical link: https://commits.webkit.org/253666@main