Source/WebCore/dom/Attr.cpp
@@ -45,7 +45,7 @@ using namespace HTMLNames;
 
 Attr::Attr(Element& element, const QualifiedName& name)
     : Node(element.document(), CreateOther)
-    , m_element(&element)
+    , m_element(element)
     , m_name(name)
 {
 }
@@ -85,8 +85,9 @@ ExceptionOr<void> Attr::setPrefix(const AtomString& prefix)
         return Exception { NamespaceError };
 
     const AtomString& newPrefix = prefix.isEmpty() ? nullAtom() : prefix;
-    if (m_element)
-        elementAttribute().setPrefix(newPrefix);
+    if (RefPtr element = m_element.get())
+        element->ensureUniqueElementData().findAttributeByName(qualifiedName())->setPrefix(newPrefix);
+
     m_name.setPrefix(newPrefix);
 
     return { };
@@ -94,8 +95,8 @@ ExceptionOr<void> Attr::setPrefix(const AtomString& prefix)
 
 void Attr::setValue(const AtomString& value)
 {
-    if (m_element)
-        m_element->setAttribute(qualifiedName(), value);
+    if (RefPtr element = m_element.get())
+        element->setAttribute(qualifiedName(), value);
     else
         m_standaloneValue = value;
 }
@@ -114,7 +115,7 @@ CSSStyleDeclaration* Attr::style()
 {
     // This is not part of the DOM API, and therefore not available to webpages. However, WebKit SPI
     // lets clients use this via the Objective-C and JavaScript bindings.
-    auto styledElement = dynamicDowncast<StyledElement>(m_element);
+    RefPtr styledElement = dynamicDowncast<StyledElement>(m_element.get());
     if (!styledElement)
         return nullptr;
     m_style = MutableStyleProperties::create();
@@ -124,16 +125,9 @@ CSSStyleDeclaration* Attr::style()
 
 AtomString Attr::value() const
 {
-    if (m_element)
-        return m_element->getAttributeForBindings(qualifiedName());
+    if (RefPtr element = m_element.get())
+        return element->getAttributeForBindings(qualifiedName());
     return m_standaloneValue;
-}
-
-Attribute& Attr::elementAttribute()
-{
-    ASSERT(m_element);
-    ASSERT(m_element->elementData());
-    return *m_element->ensureUniqueElementData().findAttributeByName(qualifiedName());
 }
 
 void Attr::detachFromElementWithValue(const AtomString& value)
@@ -148,7 +142,7 @@ void Attr::detachFromElementWithValue(const AtomString& value)
 void Attr::attachToElement(Element& element)
 {
     ASSERT(!m_element);
-    m_element = &element;
+    m_element = element;
     m_standaloneValue = nullAtom();
     setTreeScopeRecursively(element.treeScope());
 }
